--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
+    "email-check": "^1.1.0",
     "express": "^4.17.3",
     "googleapis": "^100.0.0",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "mongoose": "^6.2.8",
     "multer": "^1.4.4",
+    "node-mailjet": "^4.0.1",
     "nodemailer": "^6.7.3",
     "nodemon": "^2.0.15"
   }
