--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -21,7 +22,6 @@
     "method-override": "^3.0.0",
     "mongoose": "^6.2.8",
     "multer": "^1.4.4",
-    "node-mailjet": "^4.0.1",
     "nodemailer": "^6.7.3",
     "nodemon": "^2.0.15"
   }
